--- a/.drone.yml
+++ b/.drone.yml
@@ -22,5 +22,5 @@ steps:
       - apt update && apt install -y curl git
       - git clone https://github.com/MiCode/Xiaomi_Kernel_OpenSource -b cas-q-oss
       - cd Xiaomi_Kernel_OpenSource
-      - git push https://$GIT_ID:GIT_PWD@github.com/rsyhan/android_kernel_xiaomi_sm8250 HEAD:cas-q-oss
-     
+      - git push https://$GIT_ID:$GIT_PWD@github.com/rsyhan/android_kernel_xiaomi_sm8250 HEAD:cas-q-oss
+
